# keyrotate

./: .gitignore  DEPLOY.md  README.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  auth.py  config.py  db.py  main.py  models.py  providers.py  pyproject.toml  scheduler.py
backend/notifications/: email.py  slack.py
backend/routes/: auth.py  keys.py  rotate.py
backend/templates/: rotate.html  rotated.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  KeyForm.tsx  Login.tsx
nginx/: nginx.conf
