[project]
name = "keyrotate-backend"
version = "0.1.0"
description = "Track API key expirations and remind before they die."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.5.0",
    "itsdangerous>=2.2.0",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
